<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context="com.kidsapp.childplay.activity.SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <RelativeLayout
        android:id="@+id/rltTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTheme"
        android:paddingTop="@dimen/header_top_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">


            <ImageView
                android:id="@+id/imgBackButton"
                android:layout_width="45.0dip"
                android:layout_height="45.0dip"
                android:layout_centerVertical="true"
                android:layout_margin="5.0dip"
                android:onClick="onClickBack"
                android:src="@drawable/btn_back_150" />

            <TextView
                android:id="@+id/txtTitleSubHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Ayarlar"
                android:textColor="@color/colorBlue"
                android:textSize="20.0dip"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rltSound"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_cell_height"
            android:layout_below="@+id/rltTop"
            android:layout_marginTop="16dp"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/menu_cell_margin_left"
                android:text="@string/sound"
                android:textColor="@color/colorBlack"
                android:textSize="18dp" />

            <Switch
                android:id="@+id/soundOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:padding="16dp"
                android:theme="@style/SCBSwitch" />

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/rltMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rltSound"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_cell_height"
            android:text="@string/rate"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:onClick="RateUs"
            android:layout_marginLeft="@dimen/menu_cell_margin_left"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_cell_height"
            android:text="@string/share"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:onClick="shareApp"
            android:layout_marginLeft="@dimen/menu_cell_margin_left"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_cell_height"
            android:text="@string/diger_uygulamalar"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:onClick="MoreApp"
            android:layout_marginLeft="@dimen/menu_cell_margin_left"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_cell_height"
            android:text="@string/send_feedback"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:onClick="ContactUs"
            android:layout_marginLeft="@dimen/menu_cell_margin_left"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_cell_height"
            android:text="@string/privacy_policy"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:onClick="PrivacyPolicy"
            android:layout_marginLeft="@dimen/menu_cell_margin_left"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_cell_height"
            android:text="More App"
            android:textSize="18dp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:onClick="MoreApp"
            android:layout_marginLeft="@dimen/menu_cell_margin_left"/>

    </LinearLayout>

    </RelativeLayout>

    <!--        <RelativeLayout-->
    <!--            android:id="@+id/rltAny"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="@dimen/menu_cell_height"-->
    <!--            android:layout_below="@+id/rltMenu"-->
    <!--            android:layout_marginTop="16dp"-->
    <!--            android:background="@color/colorWhite">-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_centerVertical="true"-->
    <!--                android:layout_marginLeft="@dimen/menu_cell_margin_left"-->
    <!--                android:text="@string/sound"-->
    <!--                android:textColor="@color/colorBlack"-->
    <!--                android:textSize="18dp" />-->

    <!--            <Switch-->
    <!--                android:id="@+id/soundswitchOnOff"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_alignParentRight="true"-->
    <!--                android:layout_centerVertical="true"-->
    <!--                android:checked="true"-->
    <!--                android:padding="16dp"-->
    <!--                android:theme="@style/Widget.AppCompat.Button.Colored" />-->

    <!--        </RelativeLayout>-->

    <RelativeLayout
        android:id="@+id/llAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/llAdViewFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" />
</LinearLayout>